update cms views and editors

--- a/app/views/amd-contents.html
+++ b/app/views/amd-contents.html
@@ -26,7 +26,7 @@
 				<div 
 					class="md-list-item-text" 
 					layout="column">
-					<h3>{{::content.title}}</h3>
+					<h3>{{content.title}}</h3>
 					<h4>{{::content.name}}</h4>
 					<p>{{::content.id}}-{{::content.media_type}}-{{::content.state}}</p>
 				</div>
