--- a/app/views/shop/agencies.html
+++ b/app/views/shop/agencies.html
@@ -1,12 +1,16 @@
 <div
 	mb-preloading="ctrl.loading"
-	layout="column"
-	flex>
+	layout="column">
 	<mb-pagination-bar
+		ng-init="moreActions=[{
+			title: 'New Agency',
+			icon: 'add',
+			actionId: AMD_SHOP_AGENCY_CREATE_ACTION
+		}]"
 		mb-model="ctrl.queryParameter"
 		mb-reload="ctrl.reload()"
 		mb-sort-keys="ctrl.getSortKeys()"
-		mb-more-actions="ctrl.getActions()"
+		mb-more-actions="moreActions"
 		mb-properties="ctrl.properties">
 	</mb-pagination-bar>
 	<md-content
@@ -28,9 +32,9 @@
 				<div 
 					class="md-list-item-text" 
 					layout="column">
-					<h3>{{::pobject.title}}</h3>
-					<h4>{{::pobject.province}} {{::pobject.description}}</h4>
-					<p>{{::pobject.address}} {{::pobject.phone}}</p>
+					<h3>{{pobject.title}}</h3>
+					<!--<h4>{{pobject.province}} {{pobject.description}}</h4>-->
+					<!--<p>{{::pobject.address}} {{::pobject.phone}}</p>-->
 				</div>
 				<md-divider md-inset></md-divider> 
 			</md-list-item> 
