--- a/app/views/shop/agency.html
+++ b/app/views/shop/agency.html
@@ -19,7 +19,7 @@
 						ng-model="ctrl.item.title"
 						mb-inline-enable="{{true}}"
 						mb-inline-type="text"
-						mb-inline-on-save="ctrl.updateItem()">: {{ctrl.item.title}}</mb-inline></td>
+						mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.title}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate="">Description</td>
@@ -27,7 +27,7 @@
 						ng-model="ctrl.item.description"
 						mb-inline-enable="{{true}}"
 						mb-inline-type="text"
-						mb-inline-on-save="ctrl.updateItem()">: {{ctrl.item.description}}</mb-inline></td>
+						mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.description}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate="">Province</td>
@@ -35,7 +35,7 @@
 						ng-model="ctrl.item.province"
 						mb-inline-enable="{{true}}"
 						mb-inline-type="text"
-						mb-inline-on-save="ctrl.updateItem()">: {{ctrl.item.province}}</mb-inline></td>
+						mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.province}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate="">City</td>
@@ -43,7 +43,7 @@
 						ng-model="ctrl.item.city"
 						mb-inline-enable="{{true}}"
 						mb-inline-type="text"
-						mb-inline-on-save="ctrl.updateItem()">: {{ctrl.item.city}}</mb-inline></td>
+						mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.city}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate="">Address</td>
@@ -51,7 +51,7 @@
 						ng-model="ctrl.item.address"
 						mb-inline-enable="{{true}}"
 						mb-inline-type="text"
-						mb-inline-on-save="ctrl.updateItem()">: {{ctrl.item.address}}</mb-inline></td>
+						mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.address}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate="">Phone</td>
@@ -59,7 +59,7 @@
 						ng-model="ctrl.item.phone"
 						mb-inline-enable="{{true}}"
 						mb-inline-type="text"
-						mb-inline-on-save="ctrl.updateItem()">: {{ctrl.item.phone}}</mb-inline></td>
+						mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.phone}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate="">Point</td>
@@ -67,7 +67,7 @@
 						ng-model="ctrl.item.point"
 						mb-inline-enable="{{true}}"
 						mb-inline-type="text"
-						mb-inline-on-save="ctrl.updateItem()">: {{ctrl.item.point}}</mb-inline></td>
+						mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.point}}</mb-inline></td>
 			</tr>
 			<tr>
 				<td mb-translate="">Creation Date </td>
@@ -85,7 +85,7 @@
 			<span flex></span>
 			<md-button 
 				class = "md-raised md-accent"
-				ng-click="ctrl.deleteItem()">
+				ng-click="ctrl.deleteItem($event)">
 				<span mb-translate="">Delete</span>
 			</md-button>
 			</div>
