--- a/app/views/shop/deliver.html
+++ b/app/views/shop/deliver.html
@@ -14,39 +14,39 @@
             <table>
                 <tr>
                     <td mb-translate="">ID </td>
-                    <td>: {{deliver.id}}</td>
+                    <td>: {{ctrl.item.id}}</td>
                 </tr>
                 <tr>
                     <td mb-translate="">Title </td>
                     <td><mb-inline
-                            ng-model="deliver.title"
+                            ng-model="ctrl.item.title"
                             mb-inline-enable="{{true}}"
                             mb-inline-type="text"
-                            mb-inline-on-save="save()">: {{deliver.title}}</mb-inline></td>
+                            mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.title}}</mb-inline></td>
                 </tr>
                 <tr>
                     <td mb-translate="">Description </td>
                     <td><mb-inline
-                            ng-model="deliver.description"
+                            ng-model="ctrl.item.description"
                             mb-inline-enable="{{true}}"
                             mb-inline-type="text"
-                            mb-inline-on-save="save()">: {{deliver.description}}</mb-inline></td>
+                            mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.description}}</mb-inline></td>
                 </tr>
                 <tr>
                     <td mb-translate="">Price </td>
                     <td><mb-inline
-                            ng-model="deliver.price"
+                            ng-model="ctrl.item.price"
                             mb-inline-enable="{{true}}"
                             mb-inline-type="text"
-                            mb-inline-on-save="save()">: {{deliver.price}}</mb-inline></td>
+                            mb-inline-on-save="ctrl.updateItem($event)">: {{ctrl.item.price}}</mb-inline></td>
                 </tr>
                 <tr>
                     <td mb-translate="">Creation Date </td>
-                    <td>: {{deliver.creation_dtime| mbDate:'jYYYY-jMM-jDD'}}</td>
+                    <td>: {{ctrl.item.creation_dtime| mbDate:'jYYYY-jMM-jDD'}}</td>
                 </tr>
                 <tr>
                     <td mb-translate="">Last Modified Date </td>
-                    <td>: {{deliver.modif_dtime| mbDate:'jYYYY-jMM-jDD'}}</td>
+                    <td>: {{ctrl.item.modif_dtime| mbDate:'jYYYY-jMM-jDD'}}</td>
                 </tr>
             </table>
         </div>
@@ -55,14 +55,9 @@
             <span flex></span>
             <md-button 
                 class = "md-raised md-accent"
-                ng-click="remove()">
+                ng-click="ctrl.deleteItem()">
                 <span mb-translate="">Delete</span>
             </md-button>
-<!--             <md-button  -->
-<!--                 class="md-raised md-primary" -->
-<!--                 ng-click="ctrl.edit = true;"> -->
-<!--                 <span mb-translate="">Edit</span> -->
-<!--             </md-button> save()-->
         </div>
     </mb-titled-block>
 </md-content>
