--- a/app/views/shop/views/services.html
+++ b/app/views/shop/views/services.html
@@ -1,12 +1,16 @@
-<md-content
+<div
 	mb-preloading="ctrl.loading"
 	layout="column"
-	flex>
+	ng-init="moreActions = [{
+		title:'New Service', 
+		icon:'add',
+		actionId: AMD_SHOP_SERVICE_CREATE_ACTION
+	}]">
 	<mb-pagination-bar
 		mb-model="ctrl.queryParameter"
 		mb-reload="ctrl.reload()"
 		mb-sort-keys="ctrl.getSortKeys()"
-		mb-more-actions="ctrl.getActions()"
+		mb-more-actions="moreActions"
 		mb-properties="ctrl.properties">
 	</mb-pagination-bar>
 	<md-content
@@ -17,16 +21,20 @@
 			<md-list-item 
 				ng-repeat="pobject in ctrl.items track by pobject.id"
 				class="md-3-line" 
-				ng-href="shop/zones/{{::pobject.id}}"
+				ng-href="{{'shop/services/' + pobject.id}}"
 				style="cursor: pointer">
-				<mb-icon>shop-zone</mb-icon>
+				<img ng-src="{{pobject.avatar}}" ng-if="pobject.avatar" class="md-avatar" />
+				<mb-icon ng-if="!pobject.avatar">cloud_upload</mb-icon>
 				<div class="md-list-item-text" layout="column">
-					<h3>{{::pobject.title}}</h3>
-					<h4>{{::pobject.description}}</h4>
-					<p>{{::pobject.province}} {{::pobject.city}} {{::pobject.address}}</p>
+					<h3>{{pobject.title}}</h3>
+					<h4>
+						<span mb-translate="">Price</span>: {{pobject.price}} 
+						<span ng-show="pobject.off">- <span tanslate="">Off</span>: <s>{{pobject.off}}</s></span>
+					</h4>
+					<p>{{pobject.description}}</p>
 				</div>
 				<md-divider md-inset></md-divider> 
 			</md-list-item> 
 		</md-list>
 	</md-content>
-</md-content>
+</div>
