--- a/app/views/shop/views/tags.html
+++ b/app/views/shop/views/tags.html
@@ -1,13 +1,17 @@
 <div
 	mb-preloading="ctrl.loading"
 	layout="column"
-	flex>
+	ng-init="moreActions = [{
+		title:'New Tag', 
+		icon:'add',
+		actionId: AMD_SHOP_TAG_CREATE_ACTION
+	}]">
 	<!-- TODO: maso, 1395: در حالت خطا یک صفحه با امکان reload اضافه بشه. -->
 	<mb-pagination-bar
 		mb-model="ctrl.queryParameter"
 		mb-reload="ctrl.reload()"
 		mb-sort-keys="ctrl.getSortKeys()"
-		mb-more-actions="ctrl.getActions()"
+		mb-more-actions="moreActions"
 		mb-properties="ctrl.properties">
 	</mb-pagination-bar>
 	<md-content
