fixed: https://github.com/viraweb123/vw-dashboard/issues/12
A resource page is added to support roles.

--- a/app/views/shop/resources/zones.html
+++ b/app/views/shop/resources/zones.html
@@ -23,8 +23,8 @@
 				<div 
 					class="md-list-item-text" 
 					layout="column">
-					<h3>{{item.name}}</h3>
-					<p>{{item.description}}</p>
+					<h3>{{::item.name}}</h3>
+					<p>{{::item.description}}</p>
 				</div>
 				<md-checkbox 
 					ng-if="multi"
