--- a/app/views/user/editors/account.html
+++ b/app/views/user/editors/account.html
@@ -170,10 +170,10 @@
 		</div>
 		<div layout="row">
 			<span flex></span>
-			<md-button class="md-raised" 
-				ng-click="ctrl.updateRoles()">
-				<mb-icon>edit</mb-icon>
-				<span mb-translate>Edit</span>
+			<md-button 
+				class="md-raised" 
+				ng-click="ctrl.addRoles($event)">
+				<span mb-translate>Add Role</span>
 			</md-button>
 		</div>
 	</mb-titled-block>
