--- a/app/views/user/resources/mb-groups.html
+++ b/app/views/user/resources/mb-groups.html
@@ -1,5 +1,5 @@
 <div 
-	ng-controller="MbSeenShopCategoriesCtrl as ctrl"
+	ng-controller="MbSeenUserGroupsCtrl as ctrl"
 	mb-preloading="ctrl.state === 'busy'"
 	layout="column"
 	flex>
@@ -14,25 +14,30 @@
 		mb-infinate-scroll="ctrl.loadNextPage()"
 		layout="column"
 		flex>
+	
 		<md-list flex>
 			<md-list-item 
-				ng-repeat="role in ctrl.items track by role.id"
-				ng-click="multi || resourceCtrl.setSelected(role)"
+				ng-repeat="group in ctrl.items track by group.id"
+				ng-click="multi || resourceCtrl.setSelected(group)"
 				class="md-3-line">
-				<mb-icon>accessibility</mb-icon>
+				<mb-icon>group</mb-icon>
 				<div 
 					class="md-list-item-text" 
 					layout="column">
-					<h3>{{::role.name}}</h3>
-					<p>{{::role.description}}</p>
+					<h3>{{group.name}}</h3>
+					<h4></h4>
+					<p>{{group.description}}</p>
 				</div>
-				<md-checkbox class="md-secondary"
-					ng-init="role.selected = resourceCtrl.isSelected(role)" 
-					ng-model="role.selected"
-					ng-click="resourceCtrl.setSelected(role, role.selected)">
+				<md-checkbox 
+					ng-if="multi"
+					class="md-secondary"
+					ng-init="group.selected = resourceCtrl.isSelected(group)" 
+					ng-model="group.selected"
+					ng-click="resourceCtrl.setSelected(group, group.selected)">
 				</md-checkbox>
 				<md-divider md-inset></md-divider>
 			</md-list-item>
+			<!-- حالت لود را تعیین می‌کند. -->
 		</md-list>
 	</md-content>
 </div>
