--- a/app/views/account/mb-profile.html
+++ b/app/views/account/mb-profile.html
@@ -8,8 +8,7 @@
     flex-gt-sm="50"
     mb-title="Avatar"
     mb-progress="ctrl.avatarLoading"
-    layout="column"
-    style="margin: 8px">
+    layout="column">
 
     <div flex layout="column" layout-fill>
       <div layout="row"
@@ -81,8 +80,7 @@
     flex-gt-sm="50"
     mb-title="Public Information"
     mb-progress="ctrl.loadingProfile || ctrl.savingProfile"
-    layout="column"
-    style="margin: 8px">
+    layout="column">
     <form
       name="contactForm"
       layout="column"
