--- a/app/views/shop/editors/category.html
+++ b/app/views/shop/editors/category.html
@@ -29,7 +29,12 @@
 				</tr>
 				<tr>
 					<td mb-translate="">Parent </td>
-					<td>: {{ctrl.parent.name}}</td>
+					<td>
+					<mb-inline
+							ng-model="ctrl.parentId"
+							mb-inline-enable="{{true}}"
+							mb-inline-type="{{::AMD_SHOP_CATEGORY_SP}}"
+							mb-inline-on-save="ctrl.setParent($value, $event)">: {{ctrl.parent.name}}</mb-inline></td>
 				</tr>
 				<tr>
 					<td mb-translate="">Name </td>
