--- a/app/views/shop/editors/service.html
+++ b/app/views/shop/editors/service.html
@@ -175,10 +175,10 @@
                     <h3>{{category.name}}</h3>
                     <p>{{category.description}}</p>
                 </div>
-                <md-icon 
+                <mb-icon
                     class="md-secondary"
                     ng-click="ctrl.removeCategories(category)"
-                    aria-label="delete">delete</md-icon>
+                    aria-label="delete">delete</mb-icon>
                 <md-divider md-inset></md-divider> 
             </md-list-item>
         </md-list>
@@ -193,7 +193,7 @@
             <md-button 
                 class="md-raised md-primary" 
                 ng-click="selectCategories()">
-                <span mb-translate="">Edit</span>
+                <span mb-translate="">Add</span>
             </md-button>
         </div>
     </mb-titled-block>
