--- a/app/views/shop/views/orders.html
+++ b/app/views/shop/views/orders.html
@@ -26,8 +26,8 @@
 					class="md-list-item-text" 
 					layout="column">
 					<h3>{{::pobject.id}} - {{::pobject.full_name}} - ({{ ::(pobject.state | translate) }})</h3>
-					<h4>{{::pobject.title}} - {{::pobject.phone}} - {{::(pobject.creation_dtime | mbDateTime)}}</h4>
-					<p>{{::pobject.province}} - {{::pobject.city}} - {{::pobject.address}}</p>
+					<h4>{{::pobject.title}}</h4>
+					<p>{{::pobject.phone}} - {{::(pobject.modif_dtime | mbDateTime)}}</p>
 				</div>
 				<md-divider md-inset></md-divider>
 			</md-list-item>
