bug fixed: render a link

--- a/app/views/seo/editors/render-link.html
+++ b/app/views/seo/editors/render-link.html
@@ -1,7 +1,5 @@
 <md-content
-	id="amd-seo-render-view"
-	ng-controller="AmdSeoContentRenderCtrl as ctrl"
-	flex>
+	style="overflow: auto;">
 	<mb-titled-block
 		id="option"
 		layout="column"
