--- a/app/views/shop/editors/agency.html
+++ b/app/views/shop/editors/agency.html
@@ -1,7 +1,5 @@
 <md-content
-	class="md-padding"
-	style="overflow: auto;"
-	layout-padding>
+	style="overflow: auto;">
 	<mb-titled-block 
 		ng-show="!ctrl.edit"
 		mb-progress="ctrl.loading"
