--- a/app/views/shop/editors/tag.html
+++ b/app/views/shop/editors/tag.html
@@ -1,7 +1,5 @@
 <md-content
-	class="md-padding"
-	layout-padding 
-	flex>
+	style="overflow: auto;">
 	<mb-titled-block 
 		ng-show="!ctrl.edit"
 		mb-progress="ctrl.loading"
