--- a/app/views/shop/editors/zone.html
+++ b/app/views/shop/editors/zone.html
@@ -1,6 +1,5 @@
 <md-content
-	class="md-padding"
-	layout-padding>
+	style="overflow: auto;">
 	<mb-titled-block 
 		ng-show="!ctrl.edit"
 		mb-progress="ctrl.loading"
