bug fixed: https://github.com/viraweb123/vw-dashboard/issues/20

--- a/app/views/seo/editors/sitemap-link.html
+++ b/app/views/seo/editors/sitemap-link.html
@@ -1,9 +1,5 @@
 <md-content 
-	ng-controller="AmdSeoLinkCtrl as ctrl" 
-	layout="column" 
-	layout-padding 
-	flex>
-
+	layout="column">
 	<mb-titled-block 
 		mb-title="Detail"
 		mb-more-actions="ctrl.contentActions"
