--- a/app/views/seo/views/backends-new.html
+++ b/app/views/seo/views/backends-new.html
@@ -1,8 +1,8 @@
 <md-content
 	mb-preloading="creatingNewGate"
 	layout="column"
-	layout-padding
-	flex>
+	style="overflow: auto;"
+	layout-padding>
 	<div 
 		layout="column" 
 		layout-align="center center" 
