--- a/app/views/seo/views/links-new.html
+++ b/app/views/seo/views/links-new.html
@@ -1,7 +1,6 @@
 <md-content 
 	class="md-padding"
-	layout-padding
-	flex>
+	style="overflow: auto;">
 	<form 
 		name="linkForm"
 		ng-submit="addLink(model)"
