--- a/app/views/seo/views/links.html
+++ b/app/views/seo/views/links.html
@@ -1,7 +1,7 @@
 <div  
 	mb-preloading="ctrl.loading"
 	layout="column"
-	flex>
+	style="overflow: auto;">
 	<mb-pagination-bar
 		mb-model="ctrl.queryParameter"
 		mb-properties="ctrl.properties"
