the yoyo problem of the project is fixed.

--- a/app/views/seo/editors/backend.html
+++ b/app/views/seo/editors/backend.html
@@ -1,8 +1,6 @@
 <md-content
-	layout="column"
-	layout-padding
-	mb-preloading="loadingBackend"
-	flex>
+	style="overflow: auto;"
+	mb-preloading="loadingBackend">
 	
 	<div>
 		<div 
