Add shop-x (shop-extention) module which contains import actions

--- a/app/views/shop/views/categories.html
+++ b/app/views/shop/views/categories.html
@@ -5,6 +5,11 @@
 		title:'New Category', 
 		icon:'add',
 		actionId: AMD_SHOP_CATEGORY_CREATE_ACTION
+	},
+	{
+		title:'Import Categories', 
+		icon:'add',
+		actionId: AMD_SHOP_CATEGORY_IMPORTJSON_ACTION
 	}]">
 	<mb-pagination-bar
 		mb-model="ctrl.queryParameter"
