--- a/app/views/shop/views/products.html
+++ b/app/views/shop/views/products.html
@@ -5,6 +5,11 @@
 		title:'New Product', 
 		icon:'add',
 		actionId: AMD_SHOP_PRODUCT_CREATE_ACTION
+	},
+	{
+		title:'Import Products', 
+		icon:'add',
+		actionId: AMD_SHOP_PRODUCT_IMPORTCSV_ACTION
 	}]">
 	<mb-pagination-bar
 		mb-model="ctrl.queryParameter"
