--- a/app/scripts/module-shop/views/orders.html
+++ b/app/scripts/module-shop/views/orders.html
@@ -25,7 +25,7 @@
 				<div 
 					class="md-list-item-text" 
 					layout="column">
-					<h3>{{::pobject.id}} - {{::pobject.full_name}} - ({{ ::(pobject.state | translate) }})</h3>
+					<h3>{{::pobject.id}} - {{::pobject.full_name}} - (<span mb-translate>{{::pobject.state}}</span>)</h3>
 					<h4>{{::pobject.title}}</h4>
 					<p>{{::pobject.phone}} - {{::(pobject.modif_dtime | mbDateTime)}}</p>
 				</div>
