add mb-local to all dialogs

--- a/app/views/dialogs/category-select.html
+++ b/app/views/dialogs/category-select.html
@@ -1,4 +1,7 @@
-<md-dialog ng-controller="CategoriesCtrl" aria-label="Category">
+<md-dialog 
+	mb-local
+	ng-controller="CategoriesCtrl" 
+	aria-label="Category">
     <md-toolbar>
         <div class="md-toolbar-tools">
             <h2 mb-translate="">Select category</h2>
