--- a/app/views/dialogs/sdp-category-select.html
+++ b/app/views/dialogs/sdp-category-select.html
@@ -1,4 +1,6 @@
-<md-dialog ng-controller="SdpCategoriesCtrl" aria-label="Category">
+<md-dialog 
+	mb-local
+	ng-controller="SdpCategoriesCtrl" aria-label="Category">
     <md-toolbar>
       <div class="md-toolbar-tools">
         <h2 mb-translate>Select category</h2>
