--- a/app/views/dialogs/sdp-event-document-new.html
+++ b/app/views/dialogs/sdp-event-document-new.html
@@ -1,4 +1,6 @@
-<md-dialog aria-label="Menu Item" ng-cloak>
+<md-dialog 
+	mb-local
+	aria-label="Menu Item" ng-cloak>
 	<form name="myForm" flex layout="column" ng-action="answer(config.model)">
 		<md-toolbar>
 			<div class="md-toolbar-tools">
