--- a/app/views/dialogs/sdp-relation-new.html
+++ b/app/views/dialogs/sdp-relation-new.html
@@ -1,4 +1,6 @@
-<md-dialog ng-controller="SdpAssetsCtrl" aria-label="AssetRelation">
+<md-dialog 
+	mb-local
+	ng-controller="SdpAssetsCtrl" aria-label="AssetRelation">
 	<md-toolbar>
 		<div class="md-toolbar-tools">
 			<h2>New Relation</h2>
