--- a/app/views/dialogs/select-file.html
+++ b/app/views/dialogs/select-file.html
@@ -1,4 +1,6 @@
-<md-dialog aria-label="Select File" ng-cloak>
+<md-dialog 
+	mb-local
+	aria-label="Select File" ng-cloak>
     <form flex layout="column" ng-action="answer(config)">
         <md-toolbar>
             <div class="md-toolbar-tools">
