--- a/app/views/dialogs/tag-select.html
+++ b/app/views/dialogs/tag-select.html
@@ -1,4 +1,6 @@
-<md-dialog ng-controller="TagsCtrl" aria-label="Tag">
+<md-dialog 
+	mb-local
+	ng-controller="TagsCtrl" aria-label="Tag">
     <md-toolbar>
         <div class="md-toolbar-tools">
             <h2 mb-translate="">Select tag</h2>
