resource manage is added to manage query parameter.

--- a/app/scripts/module-cms/views/contents.html
+++ b/app/scripts/module-cms/views/contents.html
@@ -3,13 +3,13 @@
 	mb-preloading="ctrl.loading"
 	layout="column">
 	<!-- TODO: maso, 1395: در حالت خطا یک صفحه با امکان reload اضافه بشه. -->
-	<mb-pagination-bar
+<!--	<mb-pagination-bar
 		mb-model="ctrl.queryParameter"
 		mb-reload="ctrl.reload()"
 		mb-sort-keys="ctrl.getSortKeys()"
 		mb-more-actions="ctrl.getActions()"
 		mb-properties="ctrl.properties">
-	</mb-pagination-bar>
+	</mb-pagination-bar>-->
 	<md-content
 		mb-infinate-scroll="ctrl.loadNextPage()"
 		layout="column"
