--- a/app/scripts/module-bank/views/gates.html
+++ b/app/scripts/module-bank/views/gates.html
@@ -1,45 +1,31 @@
-<div
+<md-content
 	mb-preloading="ctrl.loading"
-	layout="column">
-	<mb-pagination-bar
-		ng-init="moreActions=[{
-			title: 'New gate',
-			icon: 'add',
-			actionId: AMD_BANK_GATES_CREATE_ACTION
-		}]"
-		mb-model="ctrl.queryParameter"
-		mb-reload="ctrl.reload()"
-		mb-sort-keys="ctrl.getSortKeys()"
-		mb-more-actions="moreActions"
-		mb-properties="ctrl.properties">
-	</mb-pagination-bar>
-	<md-content
-		mb-infinate-scroll="ctrl.loadNextPage()"
-		layout="column"
-		flex>
-		<md-list flex>
-			<md-list-item
-				ng-repeat="gate in ctrl.items track by gate.id"
-				class="md-3-line" 
-				ng-click="ctrl.editGate(gate)">
-				<img
-					ng-src="{{gate.url || gate.symbol || ('images/bank/' + gate.symbol + '.svg')}}" 
-					class="md-avatar"/>
-				<div
-					class="md-list-item-text" 
-					layout="column">
-					<h3>{{gate.title}}</h3>
-					<h4>{{gate.home}}</h4>
-					<!--<p>{{gate.description}}</p>-->
-				</div>
-				<md-button
-					class="md-icon-button"
-					ng-click="ctrl.deleteGate(gate)"
-					ng-aria="Remove gate">
-					<mb-icon>delete</mb-icon>
-				</md-button>
-				<md-divider md-inset></md-divider>
-			</md-list-item>
-		</md-list>
-	</md-content>
-</div>
+	mb-infinate-scroll="ctrl.loadNextPage()"
+	layout="column"
+	style="max-width: 100%; overflow: auto;"
+	flex>
+	<md-list flex>
+		<md-list-item
+			ng-repeat="gate in ctrl.items track by gate.id"
+			class="md-3-line" 
+			ng-click="ctrl.editGate(gate)">
+			<img
+				ng-src="{{gate.url || gate.symbol || ('images/bank/' + gate.symbol + '.svg')}}" 
+				class="md-avatar"/>
+			<div
+				class="md-list-item-text" 
+				layout="column">
+				<h3>{{gate.title}}</h3>
+				<h4>{{gate.home}}</h4>
+				<!--<p>{{gate.description}}</p>-->
+			</div>
+			<md-button
+				class="md-icon-button"
+				ng-click="ctrl.deleteGate(gate)"
+				ng-aria="Remove gate">
+				<mb-icon>delete</mb-icon>
+			</md-button>
+			<md-divider md-inset></md-divider>
+		</md-list-item>
+	</md-list>
+</md-content>
