fix bugs to build the project

--- a/app/scripts/module-cms/views/terms.html
+++ b/app/scripts/module-cms/views/terms.html
@@ -20,9 +20,7 @@
 			<mb-icon 
 				class="md-secondary" 
 				ng-click="ctrl.deleteItem(term, $event)" 
-				aria-label="Delete">
-				delete
-			</mb-icon>
+				aria-label="Delete">delete</mb-icon>
 		</md-list-item>
 	</md-list>
 </md-content>
