--- a/app/scripts/module-cms/views/terms.html
+++ b/app/scripts/module-cms/views/terms.html
@@ -19,7 +19,7 @@
 			<p>{{::term.name}}</p>
 			<mb-icon 
 				class="md-secondary" 
-				ng-click="ctrl.deleteItem(term, $event)" 
+				ng-click="ctrl.deleteTerm(term, $event)" 
 				aria-label="Delete">delete</mb-icon>
 		</md-list-item>
 	</md-list>
