convert some basic action into term-taxonomies action

--- a/app/scripts/module-cms/views/term-taxonomies.html
+++ b/app/scripts/module-cms/views/term-taxonomies.html
@@ -26,10 +26,8 @@
 			</div>
 			<mb-icon 
 				class="md-secondary" 
-				ng-click="ctrl.deleteItem(content, $event)" 
-				aria-label="Delete">
-				delete
-			</mb-icon>
+				ng-click="ctrl.deleteTermTaxonomy(content, $event)" 
+				aria-label="Delete">delete</mb-icon>
 		</md-list-item>
 	</md-list>
 </md-content>
