To update tenant list base on abstract list view
Add an action to edit tenant

To use tenant create action

--- a/app/scripts/module-cms/views/contents.html
+++ b/app/scripts/module-cms/views/contents.html
@@ -2,9 +2,7 @@
 	ng-init="ctrl.setDataQuery('{id, title, name, file_name, media_type, mime_type, state}')"
 	mb-preloading="ctrl.loading"
 	mb-infinate-scroll="ctrl.loadNextPage()"
-	layout="column"
-	style="max-width: 100%; overflow: auto;"
-	flex>
+	layout="column">
 	<div
 		layout="column"
 		layout-align="center center"
