--- a/app/scripts/module-tenant/views/tenants.html
+++ b/app/scripts/module-tenant/views/tenants.html
@@ -1,44 +1,29 @@
-<div
-	mb-preloading="ctrl.loading"
-	layout="column"
-	style="overflow: auto;">
-	<!-- Action bar -->
-	<mb-pagination-bar
-		mb-model="ctrl.queryParameter"
-		mb-reload="ctrl.reload()"
-		mb-sort-keys="ctrl.sortKeys"
-		mb-more-actions="ctrl.actions"
-		mb-properties="ctrl.properties">
-	</mb-pagination-bar>
-	<md-content
-		mb-infinate-scroll="ctrl.loadNextPage()"
-		layout="column"
-		style="max-width: 100%;"
-		flex>
-		<md-list>
-			<md-list-item 
-				ng-repeat="pobject in ctrl.items track by pobject.id"
-				class="md-3-line" 
-				ng-href="tenant/tenants/{{::pobject.id}}"
-				style="cursor: pointer">
-				<mb-icon>domain</mb-icon>
-				<div 
-					class="md-list-item-text" 
-					layout="column">
-					<h3 ng-if="pobject.title">{{pobject.title}}</h3>
-					<p><span mb-translate="">Subdomain: </span>{{pobject.subdomain}}</p>
-					<p ng-if="pobject.domain"><span mb-translate="">Domain: </span>{{pobject.domain}}</p>
-				</div>
-				<md-button 
-					class="md-icon-button" 
-					ng-href="http://{{pobject.domain}}"
-					target="_blank">
-					<mb-icon aria-label="Go to tenant">reply</mb-icon>
-					<md-tooltip md-direction="right"><span mb-translate="">Go to tenant</span></md-tooltip>
-				</md-button>
-				<md-divider md-inset></md-divider>
-			</md-list-item>
-		</md-list>
-	</md-content>
-</div>
+<md-content
+	mb-infinate-scroll="ctrl.loadNextPage()"
+	layout="column">
+	<md-list>
+		<md-list-item 
+			ng-repeat="pobject in ctrl.items track by pobject.id"
+			class="md-3-line" 
+			ng-click="ctrl.editTenant(pobject, $event)"
+			style="cursor: pointer">
+			<mb-icon>domain</mb-icon>
+			<div 
+				class="md-list-item-text" 
+				layout="column">
+				<h3 ng-if="pobject.title">{{pobject.title}}</h3>
+				<p><span mb-translate="">Subdomain: </span>{{pobject.subdomain}}</p>
+				<p ng-if="pobject.domain"><span mb-translate="">Domain: </span>{{pobject.domain}}</p>
+			</div>
+			<md-button 
+				class="md-icon-button" 
+				ng-href="http://{{pobject.domain}}"
+				target="_blank">
+				<mb-icon aria-label="Go to tenant">reply</mb-icon>
+				<md-tooltip md-direction="right"><span mb-translate="">Go to tenant</span></md-tooltip>
+			</md-button>
+			<md-divider md-inset></md-divider>
+		</md-list-item>
+	</md-list>
+</md-content>
 
