--- a/app/views/amd-bank-wallet.html
+++ b/app/views/amd-bank-wallet.html
@@ -142,7 +142,7 @@
                             style="margin: 0px; padding: 0px"
                             md-mode="indeterminate"
                             class="md-accent"
-                            md-color>
+                            mb-color>
                         </md-progress-linear>
                         <md-content
                             mb-infinate-scroll="transferCtrl.loadNextPage()"
@@ -206,7 +206,7 @@
                             style="margin: 0px; padding: 0px"
                             md-mode="indeterminate"
                             class="md-accent"
-                            md-color>
+                            mb-color>
                         </md-progress-linear>
                         <md-content
                             mb-infinate-scroll="paymentCtrl.loadNextPage()"
