--- a/app/views/directives/amd-content-preview.html
+++ b/app/views/directives/amd-content-preview.html
@@ -1,6 +1,6 @@
 <div 
 	style="text-align:center;" 
-	md-colors="{borderColor: 'primary-200'}">
+	mb-colors="{borderColor: 'primary-200'}">
 	<img 
 		class="amd-content-preview" 
 		style="border: solid 1px;border-color:inherit; max-width: 100%;"
