--- a/app/views/shop/order2.html
+++ b/app/views/shop/order2.html
@@ -131,7 +131,7 @@
 
 					<table align="center" class="mb-table mb-shop-table">
 						<thead>
-							<tr md-colors="{color: 'primary-700'}">
+							<tr mb-colors="{color: 'primary-700'}">
 								<td style="width: 5%"></td>
 								<td align="center" mb-translate="" style="width: 60%">Title</td>
 								<td align="center" mb-translate="" style="width: 10%">Unit/price</td>
