--- a/app/scripts/module-tenant/views/invoices.html
+++ b/app/scripts/module-tenant/views/invoices.html
@@ -19,7 +19,7 @@
 			ng-repeat="item in ctrl.items" 
 			class="md-3-line"
 			ng-href="{{'tenant/invoices/'+item.id}}"
-			md-colors="{backgroundColor: item.status==='payed' ? 'background': 'accent-100'}"> 
+			mb-colors="{backgroundColor: item.status==='payed' ? 'background': 'accent-100'}"> 
 			<mb-icon>{{item.status == 'payed' ? 'done' : 'attach_money'}}</mb-icon> 
 			<div class="md-list-item-text" layout="column">
 				<h3>{{item.title}}</h3>
