--- a/app/scripts/module-sdp/views/assets.html
+++ b/app/scripts/module-sdp/views/assets.html
@@ -1,16 +1,27 @@
-<md-content mb-infinate-scroll="ctrl.loadNextPage()">
-	<md-list flex>
-		<md-list-item ng-repeat="asset in ctrl.items track by asset.id" ng-click="ctrl.openEditor(asset, $event)"
-			class="md-3-line">
-			<img ng-if="asset.cover" class="md-avatar"
+<md-content mb-infinate-scroll="ctrl.loadNextPage()" >
+	<md-list ng-cloak>
+		<md-list-item 
+			ng-click="ctrl.showDetail(asset, $event)" 
+			ng-repeat="asset in ctrl.items track by asset.id"
+			class="noright">
+			<img
+				style="z-index: 1;"
+				class="md-avatar"
+				ng-if="asset.cover && !asset.$selected" 
+				ng-click="ctrl.toggleSelection(asset, $event)"
 				ng-src-error="https://www.gravatar.com/avatar/{{ ::asset.id | wbmd5 }}?d=identicon&size=32"
 				ng-src="{{asset.cover}}">
-			<mb-icon ng-if="!asset.cover">folder</mb-icon>
-			<div class="md-list-item-text" layout="column">
-				<h3>{{asset.title}}</h3>
-				<p>{{::asset.id}}</p>
-				<!--<p>{{asset.description}}</p>-->
-			</div>
+			<mb-icon
+				style="z-index: 1;"
+				class="md-avatar-icon"
+				ng-click="ctrl.toggleSelection(asset, $event)"
+				ng-if="!asset.cover && !asset.$selected">folder</mb-icon>
+			<mb-icon
+				style="z-index: 1;"
+				class="md-avatar-icon"
+				ng-click="ctrl.toggleSelection(asset, $event)"
+				ng-if="asset.$selected">check</mb-icon>
+			<p>{{asset.title}}</p>
 		</md-list-item>
 	</md-list>
 </md-content>
