--- a/app/views/amd-account-profile.html
+++ b/app/views/amd-account-profile.html
@@ -2,10 +2,8 @@
 	class="md-padding"
 	layout-padding
 	flex>
-	
 	<div layout-gt-lg="row" layout="column">
-		<!-- آواتار -->
-		<section 
+		<section
 			flex-order="-1"
 			flex-gt-lg="50" 
 			layout="column" 
@@ -13,40 +11,41 @@
 			layout-margin 
 			mb-preloading="ctrl.updatingAvatar || ctrl.loadUser">
 			<h3 mb-translate>Avatar</h3>
-		    <img style="border-radius: 50%"
-		    	width="200px" height="200px" ng-show="!uploadAvatar"
-		    	ng-src="/api/v2/user/accounts/{{ctrl.user.id}}/avatar" />
-            <lf-ng-md-file-input 
-            	ng-show="uploadAvatar"
-                lf-files="avatarFiles"
-                accept="image/*"
-                progress
-                preview
-                drag>
-            </lf-ng-md-file-input>
-		    <div layout="column" layout-align="center none"
-       			layout-gt-xs="row" layout-align-gt-xs="end center">
-		    	<md-button 
-		    		ng-show="!uploadAvatar"
+			<img style="border-radius: 50%"
+				width="200px" height="200px" ng-show="!uploadAvatar"
+				ng-src="/api/v2/user/accounts/{{ctrl.user.id}}/avatar" />
+			<mb-file-input
+				ng-show="uploadAvatar"
+				mg-model="avatarFiles"
+				mb-accept="image/*"
+				mb-progress
+				mb-preview
+				mb-drag>
+			</mb-file-input>
+			<div
+				layout="column" layout-align="center none"
+				layout-gt-xs="row" layout-align-gt-xs="end center">
+				<md-button
+					ng-show="!uploadAvatar"
 					class="md-raised md-primary"
 					ng-click="uploadAvatar=true">
-		    		<sapn mb-translate>edit</sapn>
-		    	</md-button>
-		    	<md-button 
-		    		ng-show="uploadAvatar"
+					<sapn mb-translate>edit</sapn>
+				</md-button>
+				<md-button 
+					ng-show="uploadAvatar"
 					class="md-raised md-primary"
 					ng-click="updateAvatar(avatarFiles)">
-<!-- 		    		<mb-icon>save</mb-icon> -->
-		    		<sapn mb-translate>save</sapn>
-		    	</md-button>
-		    	<md-button 
-		    		ng-show="uploadAvatar"
-		    		class="md-raised"
-		    		ng-click="uploadAvatar=false">
+<!-- 					<mb-icon>save</mb-icon> -->
+					<sapn mb-translate>save</sapn>
+				</md-button>
+				<md-button 
+					ng-show="uploadAvatar"
+					class="md-raised"
+					ng-click="uploadAvatar=false">
 <!-- 					<mb-icon>cancel</mb-icon> -->
 					<sapn mb-translate>cancel</sapn>
-		    	</md-button>
-		    </div>
+				</md-button>
+			</div>
 		</section>
 		<!-- Profile -->
 		<section 
@@ -61,37 +60,36 @@
 				layout="column" 
 				layout-padding>
 				<md-input-container layout-fill>
-			        <label mb-translate>First name</label>
-			        <input ng-model="ctrl.profile.first_name">
-			    </md-input-container>
+					<label mb-translate>First name</label>
+					<input ng-model="ctrl.profile.first_name">
+				</md-input-container>
 				<md-input-container layout-fill>
-			        <label mb-translate>Last name</label>
-			        <input ng-model="ctrl.profile.last_name">
-			    </md-input-container>
+					<label mb-translate>Last name</label>
+					<input ng-model="ctrl.profile.last_name">
+				</md-input-container>
 				<md-input-container layout-fill>
-			        <label mb-translate>Public email</label>
-			        <input name="email" ng-model="ctrl.profile.email" type="email">
-			        <div ng-messages="contactForm.email.$error">
-		              	<div ng-message="email">Email is not valid.</div>
-		            </div>
-			    </md-input-container>
-			    <md-input-container layout-fill>
-			        <label mb-translate>Language</label>
-			        <input ng-model="ctrl.profile.language">
-			    </md-input-container>
-			    <md-input-container layout-fill>
-			        <label mb-translate>Timezone</label>
-			        <input ng-model="ctrl.profile.timezone">
-			    </md-input-container>
+					<label mb-translate>Public email</label>
+					<input name="email" ng-model="ctrl.profile.email" type="email">
+					<div ng-messages="contactForm.email.$error">
+					  	<div ng-message="email">Email is not valid.</div>
+					</div>
+				</md-input-container>
+				<md-input-container layout-fill>
+					<label mb-translate>Language</label>
+					<input ng-model="ctrl.profile.language">
+				</md-input-container>
+				<md-input-container layout-fill>
+					<label mb-translate>Timezone</label>
+					<input ng-model="ctrl.profile.timezone">
+				</md-input-container>
 			</form>
 			<div layout="column" layout-align="center none"
-     			layout-gt-xs="row" layout-align-gt-xs="end center">
-		    	<md-button 
-		    		 class="md-raised md-primary"
-		    		 ng-click="save(ctrl.profile)">
-		    		<sapn mb-translate>update</sapn>
-		    	</md-button>
-		    </div>
+	 			layout-gt-xs="row" layout-align-gt-xs="end center">
+				<md-button 
+					 class="md-raised md-primary"
+					 ng-click="save(ctrl.profile)">
+					<sapn mb-translate>update</sapn>
+				</md-button>
+			</div>
 		</section>
-
 </md-content>
