--- a/app/views/dialogs/sdp-select-file.html
+++ b/app/views/dialogs/sdp-select-file.html
@@ -21,7 +21,12 @@
 
 		<md-dialog-content layout="column" layout-padding>
 			<md-input-container>
-				<lf-ng-md-file-input lf-files="config.files" progress preview drag></lf-ng-md-file-input>
+				<mb-file-input 
+					ng-model="config.files"
+					mb-progress
+					mb-preview
+					mb-drag>
+				</mb-file-input>
 			</md-input-container>
 		</md-dialog-content>
     </form>
