--- a/app/scripts/module-sdp/views/drives.html
+++ b/app/scripts/module-sdp/views/drives.html
@@ -1,13 +1,22 @@
-<md-content mb-preloading="ctrl.loading" mb-infinate-scroll="ctrl.loadNextPage()">
-	<md-list flex>
-		<md-list-item ng-repeat="drive in ctrl.items track by drive.id" ng-click="ctrl.openEditor(drive, $event)"
-			class="md-3-line">
-			<mb-icon>storage</mb-icon>
-			<div class="md-list-item-text" layout="column">
-				<h3>{{::drive.id}}</h3>
-				<h4>{{drive.title}}</h4>
-				<p>{{drive.description}}</p>
-			</div>
+<md-content 
+	mb-infinate-scroll="ctrl.loadNextPage()" 
+	ng-cloak>
+	<md-list>
+		<md-list-item 
+			ng-click="ctrl.execOnModel(SDP_DRIVES_DETAILS_ACTION, drive, $event)" 
+			 ng-repeat="drive in ctrl.items track by drive.id"
+			class="noright">
+			<mb-icon
+				style="z-index: 1;"
+				class="md-avatar-icon"
+				ng-click="ctrl.toggleSelection(drive, $event)"
+				ng-if="!drive.$selected">storage</mb-icon>
+			<mb-icon
+				style="z-index: 1;"
+				class="md-avatar-icon"
+				ng-click="ctrl.toggleSelection(drive, $event)"
+				ng-if="drive.$selected">check</mb-icon>
+			<p>{{::drive.id}} - {{drive.title}}</p>
 		</md-list-item>
 	</md-list>
 </md-content>
